--- a/Welder/app/src/main/res/layout/activity_verif.xml
+++ b/Welder/app/src/main/res/layout/activity_verif.xml
@@ -184,14 +184,23 @@
         android:id="@+id/editText8"
         android:layout_width="300sp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"
-        android:ems="10"
-        android:inputType="textPersonName"
+        android:layout_marginBottom="30dp"
         android:clickable="true"
+        android:ems="10"
         android:focusable="false"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        android:inputType="textPersonName"
+        app:layout_constraintBottom_toTopOf="@+id/imgView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/imgView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="30dp"
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
@@ -212,7 +221,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="50dp"
         android:background="@drawable/button2"
-        android:text="@string/kembali"
+        android:text="Kembali ke halaman awal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
