--- a/Admin/app/src/main/res/layout/activity_jenis_proyek.xml
+++ b/Admin/app/src/main/res/layout/activity_jenis_proyek.xml
@@ -6,4 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".JenisProyekActivity">
 
+    <TextView
+        android:id="@+id/textView27"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Jenis Proyek"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
