--- a/Pengguna/app/src/main/res/layout/activity_oaw.xml
+++ b/Pengguna/app/src/main/res/layout/activity_oaw.xml
@@ -4,6 +4,138 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimaryDark"
     tools:context=".OAWActivity">
 
+    <TextView
+        android:id="@+id/textView90"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="OAW"
+        android:textColor="@android:color/white"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toTopOf="@+id/frameLayout18"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <FrameLayout
+        android:id="@+id/frameLayout18"
+        android:layout_width="330dp"
+        android:layout_height="100dp"
+        android:layout_marginBottom="50dp"
+        android:background="@drawable/buttton2"
+        app:layout_constraintBottom_toTopOf="@+id/editText21"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <ImageButton
+            android:id="@+id/imageButton39"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="245sp"
+            android:layout_marginTop="37sp"
+            android:background="@android:color/white"
+            android:contentDescription="@string/sub"
+            app:srcCompat="@drawable/minus" />
+
+        <ImageButton
+            android:id="@+id/imageButton40"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="300sp"
+            android:layout_marginTop="37sp"
+            android:background="@android:color/white"
+            android:contentDescription="@string/add"
+            app:srcCompat="@drawable/add" />
+
+        <TextView
+            android:id="@+id/textView91"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12sp"
+            android:layout_marginTop="40sp"
+            android:text="OAW" />
+
+        <TextView
+            android:id="@+id/textView92"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="281sp"
+            android:layout_marginTop="40sp"
+            android:text="@string/_0" />
+    </FrameLayout>
+
+    <EditText
+        android:id="@+id/editText20"
+        android:layout_width="150sp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="30dp"
+        android:backgroundTint="@android:color/white"
+        android:clickable="true"
+        android:ems="10"
+        android:focusable="false"
+        android:inputType="textPersonName"
+        android:text="@string/tanggal_mulai"
+        android:textColor="@android:color/white"
+        app:layout_constraintBottom_toTopOf="@+id/frameLayout21"
+        app:layout_constraintEnd_toStartOf="@+id/editText21"
+        app:layout_constraintHorizontal_bias="0.577"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <EditText
+        android:id="@+id/editText21"
+        android:layout_width="150sp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="30dp"
+        android:backgroundTint="@android:color/white"
+        android:clickable="true"
+        android:ems="10"
+        android:focusable="false"
+        android:inputType="textPersonName"
+        android:text="@string/tanggal_selesai"
+        android:textColor="@android:color/white"
+        app:layout_constraintBottom_toTopOf="@+id/frameLayout21"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.846"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <FrameLayout
+        android:id="@+id/frameLayout21"
+        android:layout_width="330dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="40dp"
+        android:background="@drawable/buttton"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <TextView
+            android:id="@+id/textView93"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="50sp"
+            android:layout_marginTop="15sp"
+            android:text="@string/rp"
+            android:textColor="@android:color/white" />
+
+        <TextView
+            android:id="@+id/textView94"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="80sp"
+            android:layout_marginTop="15sp"
+            android:text="@string/_0"
+            android:textColor="@android:color/white" />
+
+        <Button
+            android:id="@+id/button28"
+            android:layout_width="50sp"
+            android:layout_height="35sp"
+            android:layout_marginStart="260sp"
+            android:layout_marginTop="10sp"
+            android:background="@drawable/buttton2"
+            android:enabled="false"
+            android:text="@android:string/ok" />
+    </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
