--- a/Admin/app/src/main/res/layout/activity_detil_proyek.xml
+++ b/Admin/app/src/main/res/layout/activity_detil_proyek.xml
@@ -248,9 +248,9 @@
             android:id="@+id/frameLayout8"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="100dp"
+            android:layout_marginBottom="30dp"
             android:background="@android:color/white"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/button28"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
@@ -314,30 +314,34 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="275sp"
                 android:layout_marginTop="55sp" />
+
             <TextView
                 android:id="@+id/textView68"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="275sp"
-                android:layout_marginTop="130sp"/>
+                android:layout_marginTop="130sp" />
+
             <TextView
                 android:id="@+id/textView69"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="275sp"
-                android:layout_marginTop="205sp"/>
+                android:layout_marginTop="205sp" />
+
             <TextView
                 android:id="@+id/textView70"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="275sp"
-                android:layout_marginTop="280sp"/>
+                android:layout_marginTop="280sp" />
+
             <TextView
                 android:id="@+id/textView71"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="275sp"
-                android:layout_marginTop="355sp"/>
+                android:layout_marginTop="355sp" />
 
             <TextView
                 android:id="@+id/textView72"
@@ -414,6 +418,30 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/button28"
+            android:layout_width="200sp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/button"
+            android:text="Edit"
+            android:textColor="@android:color/white"
+            app:layout_constraintBottom_toTopOf="@+id/button29"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <Button
+            android:id="@+id/button29"
+            android:layout_width="200sp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="39dp"
+            android:background="@drawable/button3"
+            android:text="Hapus"
+            android:textColor="@android:color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
