--- a/Admin/app/src/main/res/layout/activity_register.xml
+++ b/Admin/app/src/main/res/layout/activity_register.xml
@@ -7,246 +7,206 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".VerifActivity">
+    tools:context=".RegisterActivity">
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="250sp"
-        android:layout_height="100sp"
+        android:id="@+id/textView45"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:layout_marginBottom="30dp"
-        android:background="@drawable/button"
-        android:gravity="center"
-        android:text="@string/butuh_juru_las"
-        android:textColor="@android:color/white"
+        android:text="Register"
         android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/profile"
+        app:layout_constraintBottom_toTopOf="@+id/textView46"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.559"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textView46"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="56dp"
-        android:text="Nama Panggilan"
+        android:layout_marginStart="80dp"
+        android:text="Nama Depan"
         app:layout_constraintBottom_toTopOf="@+id/editText"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/editText"
-        android:layout_width="300sp"
+        android:layout_width="250sp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="30dp"
         android:ems="10"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
+        app:layout_constraintBottom_toTopOf="@+id/textView47"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textView47"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="56dp"
-        android:text="Nama Lengkap"
+        android:layout_marginStart="80dp"
+        android:text="Nama Belakang"
         app:layout_constraintBottom_toTopOf="@+id/editText2"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/editText2"
-        android:layout_width="300sp"
+        android:layout_width="250sp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="30dp"
         android:ems="10"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/textView4"
+        app:layout_constraintBottom_toTopOf="@+id/textView48"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/textView48"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="56dp"
-        android:text="No KTP"
+        android:layout_marginStart="76dp"
+        android:text="Username"
         app:layout_constraintBottom_toTopOf="@+id/editText3"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/editText3"
-        android:layout_width="300sp"
+        android:layout_width="250sp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="30dp"
         android:ems="10"
-        android:inputType="number"
-        app:layout_constraintBottom_toTopOf="@+id/textView5"
+        android:inputType="textPersonName"
+        app:layout_constraintBottom_toTopOf="@+id/textView49"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/textView49"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="56dp"
-        android:text="Alamat Lengkap"
+        android:layout_marginStart="80dp"
+        android:text="Email"
         app:layout_constraintBottom_toTopOf="@+id/editText4"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/editText4"
-        android:layout_width="300sp"
+        android:layout_width="250sp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="30dp"
         android:ems="10"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/textView6"
+        android:inputType="textEmailAddress"
+        app:layout_constraintBottom_toTopOf="@+id/textView50"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/textView50"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="56dp"
-        android:text="Alamat Domisili"
+        android:layout_marginStart="80dp"
+        android:text="Nomor Telepon"
         app:layout_constraintBottom_toTopOf="@+id/editText5"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/editText5"
-        android:layout_width="300sp"
+        android:layout_width="250sp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="30dp"
         android:ems="10"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/textView7"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="56dp"
-        android:text="Spesifikasi Proses Welding"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/editText6"/>
-
-    <EditText
-        android:id="@+id/editText6"
-        android:layout_width="300sp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:clickable="true"
-        android:focusable="false"
-        app:layout_constraintBottom_toTopOf="@+id/textView8"
+        android:inputType="phone"
+        app:layout_constraintBottom_toTopOf="@+id/textView51"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/textView51"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="56dp"
-        android:text="Posisi Pengelasan"
+        android:layout_marginStart="80dp"
+        android:text="Tipe"
         app:layout_constraintBottom_toTopOf="@+id/editText7"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/editText7"
-        android:layout_width="300sp"
+        android:layout_width="250sp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="30dp"
-        android:ems="10"
-        android:inputType="textPersonName"
         android:clickable="true"
+        android:ems="10"
         android:focusable="false"
-        app:layout_constraintBottom_toTopOf="@+id/textView9"
+        android:inputType="textPersonName"
+        app:layout_constraintBottom_toTopOf="@+id/textView52"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/textView52"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="56dp"
-        android:text="Sertifikat Las"
+        android:layout_marginStart="80dp"
+        android:text="Password"
         app:layout_constraintBottom_toTopOf="@+id/editText8"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/editText8"
-        android:layout_width="300sp"
+        android:layout_width="250sp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="30dp"
-        android:clickable="true"
         android:ems="10"
-        android:focusable="false"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/imgView"
+        android:inputType="textPassword"
+        app:layout_constraintBottom_toTopOf="@+id/textView53"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <ImageView
-        android:id="@+id/imgView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+    <TextView
+        android:id="@+id/textView53"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="80dp"
+        android:text="Konfirmasi Password"
+        app:layout_constraintBottom_toTopOf="@+id/editText9"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <EditText
+        android:id="@+id/editText9"
+        android:layout_width="250sp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="30dp"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        android:ems="10"
+        android:inputType="textPassword"
+        app:layout_constraintBottom_toTopOf="@+id/button25"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="300sp"
+        android:id="@+id/button25"
+        android:layout_width="150sp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
         android:background="@drawable/button"
-        android:text="Selesai"
+        android:text="Daftar"
         android:textColor="@android:color/white"
-        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintBottom_toTopOf="@+id/button26"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button2"
-        android:layout_width="300sp"
+        android:id="@+id/button26"
+        android:layout_width="150sp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="52dp"
         android:background="@drawable/button2"
-        android:text="Kembali ke halaman awal"
+        android:text="Kembali"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/profile"
-        android:layout_width="100sp"
-        android:layout_height="100sp"
-        android:layout_marginBottom="5dp"
-        android:src="@drawable/ic_launcher_background"
-        app:layout_constraintBottom_toTopOf="@+id/button5"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/button5"
-        android:layout_width="70sp"
-        android:layout_height="20sp"
-        android:layout_marginBottom="30dp"
-        android:background="@drawable/button"
-        android:text="Pilih Foto"
-        android:textColor="@android:color/white"
-        android:textSize="10sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
-        tools:layout_editor_absoluteX="172dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
