--- a/Admin/app/src/main/res/layout/list_edit.xml
+++ b/Admin/app/src/main/res/layout/list_edit.xml
@@ -15,7 +15,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/textVieww4"
+            android:id="@+id/text1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="5dp"
@@ -24,7 +24,7 @@
             android:textSize="20dip" />
 
         <TextView
-            android:id="@+id/textVieww5"
+            android:id="@+id/text2"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:paddingLeft="5dp"
@@ -35,14 +35,14 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/button23"
+        android:id="@+id/but1"
         android:layout_width="100sp"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_marginTop="20dp"
         android:layout_marginRight="12dp"
         android:background="@drawable/button"
-        android:text="Pilih Welder"
+        android:text="Edit Welder"
         android:textColor="@android:color/white"/>
 
 
