--- a/Pengguna/app/src/main/res/layout/activity_gtaw.xml
+++ b/Pengguna/app/src/main/res/layout/activity_gtaw.xml
@@ -70,14 +70,14 @@
         android:id="@+id/editText14"
         android:layout_width="150sp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="28dp"
+        android:layout_marginBottom="20dp"
         android:backgroundTint="@android:color/white"
+        android:clickable="true"
         android:ems="10"
+        android:focusable="false"
         android:inputType="textPersonName"
         android:text="@string/tanggal_mulai"
         android:textColor="@android:color/white"
-        android:clickable="true"
-        android:focusable="false"
         app:layout_constraintBottom_toTopOf="@+id/frameLayout6"
         app:layout_constraintEnd_toStartOf="@+id/editText15"
         app:layout_constraintHorizontal_bias="0.571"
@@ -87,14 +87,14 @@
         android:id="@+id/editText15"
         android:layout_width="150sp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="28dp"
+        android:layout_marginBottom="20dp"
         android:backgroundTint="@android:color/white"
+        android:clickable="true"
         android:ems="10"
+        android:focusable="false"
         android:inputType="textPersonName"
         android:text="@string/tanggal_selesai"
         android:textColor="@android:color/white"
-        android:clickable="true"
-        android:focusable="false"
         app:layout_constraintBottom_toTopOf="@+id/frameLayout6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.842"
@@ -104,7 +104,7 @@
         android:id="@+id/frameLayout6"
         android:layout_width="330dp"
         android:layout_height="50sp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="30dp"
         android:background="@drawable/buttton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -132,11 +132,20 @@
             android:id="@+id/button21"
             android:layout_width="50sp"
             android:layout_height="35sp"
-            android:layout_marginStart="260sp"
-            android:layout_marginTop="10sp"
+            android:layout_marginStart="270sp"
+            android:layout_marginTop="8sp"
             android:background="@drawable/buttton2"
-            android:text="@android:string/ok"
-            android:enabled="false"/>
+            android:enabled="false"
+            android:text="@android:string/ok" />
+
+        <Button
+            android:id="@+id/button32"
+            android:layout_width="70sp"
+            android:layout_height="35sp"
+            android:layout_marginStart="190sp"
+            android:layout_marginTop="8sp"
+            android:background="@drawable/buttton2"
+            android:text="Kembali" />
     </FrameLayout>
 
     <TextView
@@ -205,7 +214,7 @@
         android:id="@+id/frameLayout16"
         android:layout_width="330dp"
         android:layout_height="100dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="70dp"
         android:background="@drawable/buttton2"
         app:layout_constraintBottom_toTopOf="@+id/editText15"
         app:layout_constraintEnd_toEndOf="parent"
@@ -253,4 +262,19 @@
             android:layout_marginTop="5sp"
             android:text="Marine" />
     </FrameLayout>
+
+    <EditText
+        android:id="@+id/editText28"
+        android:layout_width="330sp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="80dp"
+        android:backgroundTint="@android:color/white"
+        android:ems="10"
+        android:hint="Alamat"
+        android:inputType="textPersonName"
+        android:textColor="@android:color/white"
+        android:textColorHint="@android:color/white"
+        app:layout_constraintBottom_toTopOf="@+id/frameLayout6"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
