--- a/Pengguna/app/src/main/res/layout/activity_smaw.xml
+++ b/Pengguna/app/src/main/res/layout/activity_smaw.xml
@@ -120,7 +120,7 @@
         android:id="@+id/sfl3"
         android:layout_width="330dp"
         android:layout_height="100dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="70dp"
         android:background="@drawable/buttton2"
         app:layout_constraintBottom_toTopOf="@+id/editText11"
         app:layout_constraintEnd_toEndOf="parent"
@@ -169,15 +169,15 @@
         android:id="@+id/editText11"
         android:layout_width="150sp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="28dp"
+        android:layout_marginBottom="20dp"
         android:backgroundTint="@android:color/white"
+        android:clickable="true"
         android:ems="10"
+        android:focusable="false"
         android:importantForAutofill="no"
         android:inputType="textPersonName"
         android:text="@string/tanggal_selesai"
         android:textColor="@android:color/white"
-        android:clickable="true"
-        android:focusable="false"
         app:layout_constraintBottom_toTopOf="@+id/frameLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.85"
@@ -187,15 +187,15 @@
         android:id="@+id/editText10"
         android:layout_width="150sp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="28dp"
+        android:layout_marginBottom="20dp"
         android:backgroundTint="@android:color/white"
+        android:clickable="true"
         android:ems="10"
+        android:focusable="false"
         android:importantForAutofill="no"
         android:inputType="textPersonName"
         android:text="@string/tanggal_mulai"
         android:textColor="@android:color/white"
-        android:clickable="true"
-        android:focusable="false"
         app:layout_constraintBottom_toTopOf="@+id/frameLayout"
         app:layout_constraintEnd_toStartOf="@+id/editText11"
         app:layout_constraintHorizontal_bias="0.583"
@@ -205,7 +205,7 @@
         android:id="@+id/frameLayout"
         android:layout_width="330dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="30dp"
         android:background="@drawable/buttton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -233,11 +233,20 @@
             android:id="@+id/button19"
             android:layout_width="50sp"
             android:layout_height="35sp"
-            android:layout_marginStart="260sp"
-            android:layout_marginTop="10sp"
+            android:layout_marginStart="270sp"
+            android:layout_marginTop="8sp"
             android:background="@drawable/buttton2"
-            android:text="@android:string/ok"
-            android:enabled="false"/>
+            android:enabled="false"
+            android:text="@android:string/ok" />
+
+        <Button
+            android:id="@+id/button29"
+            android:layout_width="70sp"
+            android:layout_height="35sp"
+            android:layout_marginStart="190sp"
+            android:layout_marginTop="8sp"
+            android:background="@drawable/buttton2"
+            android:text="Kembali" />
     </FrameLayout>
 
     <TextView
@@ -253,7 +262,7 @@
         android:id="@+id/frameLayout14"
         android:layout_width="330dp"
         android:layout_height="100dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="70dp"
         android:background="@drawable/buttton2"
         app:layout_constraintBottom_toTopOf="@+id/editText11"
         app:layout_constraintEnd_toEndOf="parent"
@@ -359,5 +368,20 @@
             android:layout_marginTop="10sp"
             android:text="Industri" />
     </FrameLayout>
+
+    <EditText
+        android:id="@+id/editText29"
+        android:layout_width="330sp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="80dp"
+        android:backgroundTint="@android:color/white"
+        android:ems="10"
+        android:hint="Alamat"
+        android:inputType="textPersonName"
+        android:textColor="@android:color/white"
+        android:textColorHint="@android:color/white"
+        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
