--- a/Pengguna/app/src/main/res/layout/activity_smfcaw.xml
+++ b/Pengguna/app/src/main/res/layout/activity_smfcaw.xml
@@ -69,7 +69,7 @@
         android:id="@+id/frameLayout12"
         android:layout_width="330sp"
         android:layout_height="100sp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="70dp"
         android:background="@drawable/buttton2"
         app:layout_constraintBottom_toTopOf="@+id/editText16"
         app:layout_constraintEnd_toEndOf="parent"
@@ -115,14 +115,14 @@
         android:id="@+id/editText16"
         android:layout_width="150sp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="28dp"
+        android:layout_marginBottom="20dp"
         android:backgroundTint="@android:color/white"
+        android:clickable="true"
         android:ems="10"
+        android:focusable="false"
         android:inputType="textPersonName"
         android:text="@string/tanggal_mulai"
         android:textColor="@android:color/white"
-        android:clickable="true"
-        android:focusable="false"
         app:layout_constraintBottom_toTopOf="@+id/frameLayout13"
         app:layout_constraintEnd_toStartOf="@+id/editText19"
         app:layout_constraintHorizontal_bias="0.571"
@@ -132,14 +132,14 @@
         android:id="@+id/editText19"
         android:layout_width="150sp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="28dp"
+        android:layout_marginBottom="20dp"
         android:backgroundTint="@android:color/white"
+        android:clickable="true"
         android:ems="10"
+        android:focusable="false"
         android:inputType="textPersonName"
         android:text="@string/tanggal_selesai"
         android:textColor="@android:color/white"
-        android:clickable="true"
-        android:focusable="false"
         app:layout_constraintBottom_toTopOf="@+id/frameLayout13"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.842"
@@ -149,7 +149,7 @@
         android:id="@+id/frameLayout13"
         android:layout_width="330dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="36dp"
+        android:layout_marginBottom="30dp"
         android:background="@drawable/buttton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -178,11 +178,20 @@
             android:id="@+id/button23"
             android:layout_width="50sp"
             android:layout_height="35sp"
-            android:layout_marginStart="260sp"
-            android:layout_marginTop="10sp"
+            android:layout_marginStart="270sp"
+            android:layout_marginTop="8sp"
             android:background="@drawable/buttton2"
-            android:text="@android:string/ok"
-            android:enabled="false"/>
+            android:enabled="false"
+            android:text="@android:string/ok" />
+
+        <Button
+            android:id="@+id/button30"
+            android:layout_width="70sp"
+            android:layout_height="35sp"
+            android:layout_marginStart="190sp"
+            android:layout_marginTop="8sp"
+            android:background="@drawable/buttton2"
+            android:text="Kembali" />
 
 
     </FrameLayout>
@@ -195,6 +204,21 @@
         android:text="Material Carbon Steel dan Stainless Steel"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toTopOf="@+id/frameLayout11"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <EditText
+        android:id="@+id/editText30"
+        android:layout_width="330sp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="80dp"
+        android:backgroundTint="@android:color/white"
+        android:ems="10"
+        android:hint="Alamat"
+        android:inputType="textPersonName"
+        android:textColor="@android:color/white"
+        android:textColorHint="@android:color/white"
+        app:layout_constraintBottom_toTopOf="@+id/frameLayout13"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
