--- a/Pengguna/app/src/main/res/layout/activity_smgtaw.xml
+++ b/Pengguna/app/src/main/res/layout/activity_smgtaw.xml
@@ -25,7 +25,7 @@
         android:id="@+id/frameLayout8"
         android:layout_width="330dp"
         android:layout_height="100dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="70dp"
         android:background="@drawable/buttton2"
         app:layout_constraintBottom_toTopOf="@+id/editText17"
         app:layout_constraintEnd_toEndOf="parent"
@@ -71,14 +71,14 @@
         android:id="@+id/editText17"
         android:layout_width="150sp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="20dp"
         android:backgroundTint="@android:color/white"
+        android:clickable="true"
         android:ems="10"
+        android:focusable="false"
         android:inputType="textPersonName"
         android:text="@string/tanggal_mulai"
         android:textColor="@android:color/white"
-        android:clickable="true"
-        android:focusable="false"
         app:layout_constraintBottom_toTopOf="@+id/frameLayout5"
         app:layout_constraintEnd_toStartOf="@+id/editText18"
         app:layout_constraintHorizontal_bias="0.577"
@@ -89,14 +89,14 @@
         android:layout_width="150sp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="40dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="20dp"
         android:backgroundTint="@android:color/white"
+        android:clickable="true"
         android:ems="10"
+        android:focusable="false"
         android:inputType="textPersonName"
         android:text="@string/tanggal_selesai"
         android:textColor="@android:color/white"
-        android:clickable="true"
-        android:focusable="false"
         app:layout_constraintBottom_toTopOf="@+id/frameLayout5"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -104,7 +104,7 @@
         android:id="@+id/frameLayout5"
         android:layout_width="330dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="30dp"
         android:background="@drawable/buttton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -132,11 +132,20 @@
             android:id="@+id/button22"
             android:layout_width="50sp"
             android:layout_height="35sp"
-            android:layout_marginStart="260sp"
-            android:layout_marginTop="10sp"
+            android:layout_marginStart="270sp"
+            android:layout_marginTop="8sp"
             android:background="@drawable/buttton2"
-            android:text="@android:string/ok"
-            android:enabled="false"/>
+            android:enabled="false"
+            android:text="@android:string/ok" />
+
+        <Button
+            android:id="@+id/button31"
+            android:layout_width="70sp"
+            android:layout_height="35sp"
+            android:layout_marginStart="190sp"
+            android:layout_marginTop="8sp"
+            android:background="@drawable/buttton2"
+            android:text="Kembali" />
     </FrameLayout>
 
     <FrameLayout
@@ -188,7 +197,7 @@
         android:id="@+id/frameLayout9"
         android:layout_width="330sp"
         android:layout_height="100sp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="70dp"
         android:background="@drawable/buttton2"
         app:layout_constraintBottom_toTopOf="@+id/editText17"
         app:layout_constraintEnd_toEndOf="parent"
@@ -294,7 +303,7 @@
         android:id="@+id/frameLayout19"
         android:layout_width="330sp"
         android:layout_height="100sp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="70dp"
         android:background="@drawable/buttton2"
         app:layout_constraintBottom_toTopOf="@+id/editText18"
         app:layout_constraintEnd_toEndOf="parent"
@@ -341,5 +350,20 @@
             android:layout_marginStart="150sp"
             android:text="Marine" />
     </FrameLayout>
+
+    <EditText
+        android:id="@+id/editText31"
+        android:layout_width="330sp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="80dp"
+        android:backgroundTint="@android:color/white"
+        android:ems="10"
+        android:hint="Alamat"
+        android:inputType="textPersonName"
+        android:textColor="@android:color/white"
+        android:textColorHint="@android:color/white"
+        app:layout_constraintBottom_toTopOf="@+id/frameLayout5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
