--- a/Pengguna/app/src/main/res/layout/list_proyek.xml
+++ b/Pengguna/app/src/main/res/layout/list_proyek.xml
@@ -2,8 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="16dp">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -13,37 +12,34 @@
         android:layout_marginLeft="4dp"
         android:layout_marginTop="1dp"
         android:orientation="vertical">
-
         <TextView
-            android:id="@+id/textVieww4"
+            android:id="@+id/textView96"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="5dp"
             android:paddingTop="15dp"
-            android:textColor="@android:color/black"
-            android:textSize="20dip" />
+            android:paddingLeft="5dp"
+            android:textSize="20dp"
+            />
 
         <TextView
-            android:id="@+id/textVieww5"
+            android:id="@+id/textView97"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:paddingLeft="5dp"
             android:paddingTop="10dp"
-            android:textColor="@android:color/black"
-            android:textSize="11sp" />
-
+            android:paddingLeft="5dp"
+            android:textSize="11dp"
+            />
     </LinearLayout>
 
     <Button
-        android:id="@+id/button23"
+        android:id="@+id/butondetail"
         android:layout_width="100sp"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentEnd="true"
         android:layout_marginTop="20dp"
-        android:layout_marginRight="12dp"
-        android:background="@drawable/button"
-        android:text="Pilih Welder"
-        android:textColor="@android:color/white"/>
-
-
+        android:layout_marginEnd="20dp"
+        android:background="@drawable/buttton"
+        android:text="Detail"
+        android:textColor="@android:color/white" />
 </RelativeLayout>
